force-app/main/default/objects/InterfaceConfig__mdt/InterfaceConfig__mdt.object-meta.xml
<CustomObject>
    <description>인터페이스별 Callout 설정 (Credential, 구현 클래스)</description>
    <label>Interface_Config</label>
</CustomObject>