force-app/main/default/objects/InterfaceConfig__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>배치 사이즈</description>
    <inlineHelpText>배치 사이즈</inlineHelpText>
    <label>BatchSize</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>