force-app/main/default/objects/InterfaceConfig__mdt/fields/ImplementationClassName__c.field-meta.xml
<CustomField>
    <fullName>ImplementationClassName__c</fullName>
    <description>구현 클래스명</description>
    <inlineHelpText>구현 클래스명</inlineHelpText>
    <label>Implementation_ClassName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>