force-app/main/default/objects/InterfaceConfig__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>활성화 여부</description>
    <inlineHelpText>활성화 여부</inlineHelpText>
    <label>is_Active</label>
    <type>Checkbox</type>
</CustomField>