force-app/main/default/objects/InterfaceConfig__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <defaultValue>&apos;POST&apos;</defaultValue>
    <description>HTTP 메서드</description>
    <inlineHelpText>HTTP 메서드</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>