force-app/main/default/objects/InterfaceConfig__mdt/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>NamedCredential</description>
    <inlineHelpText>NamedCredential</inlineHelpText>
    <label>Named_Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>