force-app/main/default/objects/InterfaceConfig__mdt/fields/ResourcePath__c.field-meta.xml
<CustomField>
    <fullName>ResourcePath__c</fullName>
    <description>리소스 경로</description>
    <inlineHelpText>리소스 경로</inlineHelpText>
    <label>Resource_Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>