force-app/main/default/objects/InterfaceConfig__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>타임아웃</description>
    <inlineHelpText>타임아웃</inlineHelpText>
    <label>Timeout</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>